# chatterbox-vllm

./: .gitignore  Dockerfile  LICENSE  README.md  batch_synthesize.py  benchmark-multilingual-fr.py  benchmark-multilingual-zh.py  benchmark.py  example-tts-min-vram.py  example-tts-multilingual.py  example-tts.py  gradio_tts_app.py  pyproject.toml  upload-package.sh
docs/: benchmark-text-1.txt  benchmark-text-fr-1.txt  benchmark-text-zh-1.txt
input/: benchmark-text-2.txt
src/chatterbox_vllm/: text_utils.py  tts.py
src/chatterbox_vllm/models/s3gen/: configs.py  flow.py  s3gen.py
src/chatterbox_vllm/models/t3/: __init__.py  entokenizer.py  mtltokenizer.py  t3.py
src/chatterbox_vllm/models/t3/modules/: cond_enc.py  perceiver.py  t3_config.py
